lingxi-code/tui/tests/snapshots/render_diff__snapshot_large_diff_truncation.snap
---
source: tui/tests/render_diff.rs
assertion_line: 93
expression: s
---
[C]  1 + [C]L0
[C]  2 + [C]L1
[C]  3 + [C]L2
[C]  4 + [C]L3
[C]  5 + [C]L4
[C]  6 + [C]L5
[C]  7 + [C]L6
[C]  8 + [C]L7
[C]  9 + [C]L8
[C] 10 + [C]L9
[C] 11 + [C]L10
[C] 12 + [C]L11
[C] 13 + [C]L12
[C] 14 + [C]L13
[C] 15 + [C]L14
[C] 16 + [C]L15
[C] 17 + [C]L16
[C] 18 + [C]L17
[C] 19 + [C]L18
[C] 20 + [C]L19
[C] 21 + [C]L20
[C] 22 + [C]L21
[C] 23 + [C]L22
[C] 24 + [C]L23
[C] 25 + [C]L24
[C] 26 + [C]L25
[C] 27 + [C]L26
[C] 28 + [C]L27
[C] 29 + [C]L28
[C] 30 + [C]L29
[C] 31 + [C]L30
[C] 32 + [C]L31
[C] 33 + [C]L32
[C] 34 + [C]L33
[C] 35 + [C]L34
[C] 36 + [C]L35
[C] 37 + [C]L36
[C] 38 + [C]L37
[C] 39 + [C]L38
[C] 40 + [C]L39
[C] 41 + [C]L40
[C] 42 + [C]L41
[C] 43 + [C]L42
[C] 44 + [C]L43
[C] 45 + [C]L44
[C] 46 + [C]L45
[C] 47 + [C]L46
[C] 48 + [C]L47
[C] 49 + [C]L48
[C] 50 + [C]L49
[C] 51 + [C]L50
[C] 52 + [C]L51
[C] 53 + [C]L52
[C] 54 + [C]L53
[C] 55 + [C]L54
[C] 56 + [C]L55
[C] 57 + [C]L56
[C] 58 + [C]L57
[C] 59 + [C]L58
[C] 60 + [C]L59
[C] 61 + [C]L60
[C] 62 + [C]L61
[C] 63 + [C]L62
[C] 64 + [C]L63
[C] 65 + [C]L64
[C] 66 + [C]L65
[C] 67 + [C]L66
[C] 68 + [C]L67
[C] 69 + [C]L68
[C] 70 + [C]L69
[C] 71 + [C]L70
[C] 72 + [C]L71
[C] 73 + [C]L72
[C] 74 + [C]L73
[C] 75 + [C]L74
[C] 76 + [C]L75
[C] 77 + [C]L76
[C] 78 + [C]L77
[C] 79 + [C]L78
[C] 80 + [C]L79
[C] 81 + [C]L80
[C] 82 + [C]L81
[C] 83 + [C]L82
[C] 84 + [C]L83
[C] 85 + [C]L84
[C] 86 + [C]L85
[C] 87 + [C]L86
[C] 88 + [C]L87
[C] 89 + [C]L88
[C] 90 + [C]L89
[C] 91 + [C]L90
[C] 92 + [C]L91
[C] 93 + [C]L92
[C] 94 + [C]L93
[C] 95 + [C]L94
[C] 96 + [C]L95
[C] 97 + [C]L96
[C] 98 + [C]L97
[C] 99 + [C]L98
[C]100 + [C]L99
[C]… 60 more lines
