lingxi-code/tui/tests/snapshots/render_diff__snapshot_modify_mixed.snap
---
source: tui/tests/render_diff.rs
assertion_line: 59
expression: "structure(&render(\"foo\\nkeep\\n\", \"bar\\nkeep\\n\", Some(\"x.rs\"),\nThemeName::Dark))"
---
[C]1 - [P]foo
[C]1 + [C]bar
[C]2   [C]keep
